--- a/views/planner/Planner.ejs
+++ b/views/planner/Planner.ejs
@@ -23,81 +23,88 @@
 <script>
 
 //initiate google maps
-  function initMap() {
+function initMap() {
     //google maps settings
-        var map = new google.maps.Map(document.getElementById('map'), {
-          center: {lat: -34.397, lng: 150.644},
-          zoom: 10
-        });
-       
+    var markers=[] ; // array for storing all of the markers  
+    var map = new google.maps.Map(document.getElementById('map'), {
+      center: {lat: -34.397, lng: 150.644},
+      zoom: 10
+    });
+                    
+    // obtain geolocatin of current position
+    if (navigator.geolocation) {
+      navigator.geolocation.getCurrentPosition(function(position) {
         
-        // obtain geolocatin of current position
-        if (navigator.geolocation) {
-          navigator.geolocation.getCurrentPosition(function(position) {
-            
-        //set map center to current geolocation
-              $("#currentLocation").click(function() { 
-                map.setCenter( {lat: position.coords.latitude, lng: position.coords.longitude});
-              });
+    //set map center to current geolocation
+          $("#currentLocation").click(function() { 
+            map.setCenter( {lat: position.coords.latitude, lng: position.coords.longitude});
           });
-        }else{
-            console.log("failed")
-          };
-        
+      });
+    }else{
+        console.log("failed")
+      };
+
         
     //Create search and render results using AJAX.
         //AJAX post request  to node and expect to recieve yelp data in JSON.
+    
+    $("#testbutton").click(function(){
+       
+       
+       
+        //function for setting markers on map
+        function markMap(map){
+                for ( var i = 0; i < markers.length; i++ ){
+                    markers[i].setMap(map);
+                }
+        }
+       //remove markers on map
+        markMap(null);
+        markers=[];
+
         
-        $("#testbutton").click(function(){
-            
-            
-            
-            var term = $("#term").val();         //obtain value from input form
-            var location = $("#location").val(); //obtain value from input form
-            
-            
-            //Post data into node ----> see file app.js    
-            $.ajax({
-                type: "POST",
-                url: "/YelpData",
-                data: {term:term, location:location},
-                dataType:"json",
-          
-          
-          
-          //Return data obtained from node 
-                success: function(yelpData){
-          
-                  //set center of map to search locations
-                  console.log(yelpData.region.center.latitude)
-                  
-                    map.setCenter({lat: yelpData.region.center.latitude , lng: yelpData.region.center.longitude}); 
-                     
-                     console.log(yelpData);
+        
+        var term = $("#term").val();         //obtain value from input form
+        var location = $("#location").val(); //obtain value from input form
+        
+        //Post data into node ----> see file app.js    
+        $.ajax({
+            type: "POST",
+            url: "/YelpData",
+            data: {term:term, location:location},
+            dataType:"json",
+            success: function(yelpData){    //Return data obtained from node 
+      
+              //set center of map to search locations
+                map.setCenter({lat: yelpData.region.center.latitude , lng: yelpData.region.center.longitude}); 
                
-                     //Render results from yelp search   
-                     yelpData.businesses.forEach(function(YelpBusiness){
-                       console.log(YelpBusiness.location.coordinate.latitude);
-                       console.log(YelpBusiness.location.coordinate.longitude);
-                        
-                        marker = new google.maps.Marker({
-                        position: {lat:YelpBusiness.location.coordinate.latitude, lng:YelpBusiness.location.coordinate.longitude},
-                        map: map,
-                        title: YelpBusiness.name
-                        });
-                        marker.setMap(map)
+            //Render results from yelp search   
+                yelpData.businesses.forEach(function(YelpBusiness){
+               
+                    marker = new google.maps.Marker({
+                            position: {lat:YelpBusiness.location.coordinate.latitude, lng:YelpBusiness.location.coordinate.longitude},
+                            title: YelpBusiness.name
+                            });    
+                   
+                   markers.push(marker);    
+      
+                    $("#searchResults").append(function(){
+                        return "<li>"+YelpBusiness.name+"</li>";
+                    
+                   });
+                 });
+               
+               markMap(map);
+             },
         
-                
-                
-                       $("#searchResults").append(function(){
-                         return "<li>"+YelpBusiness.name+"</li>";
-                       });
-                     });
-                 }
-            });
-          });
- 
-  };
+        });
+        
+       
+        
+            
+      });
+
+};
      
     
  
@@ -106,8 +113,8 @@
    
     <form class="navbar-form navbar-left">
         <div class="form-group">
-          <input type="text" class="form-control" id="term" placeholder="Name of Place,Trails.....">
-          <input type="text" class="form-control" id="location" placeholder="Location">
+          <input type="text" class="form-control" id="term" value="mexican" placeholder="Name of Place,Trails.....">
+          <input type="text" class="form-control" id="location" value="San Jose" placeholder="Location">
         </div>
         <button type="button" id="currentLocation" class="btn btn-default">Submit</button>
         <button type="button" id="testbutton" class="btn btn-default">Test</button>
