--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -33,13 +33,13 @@
   <% if (!currentUser){%> 
        <form class="navbar-form navbar-right" role="search" action="/login" method="POST">
         <div class="form-group">
-          <label class="sr-only" for="exampleInputEmail3">Email address</label>
-          <input type="text" class="form-control" id="exampleInputEmail3" name="username" placeholder="Username">
+          <label class="sr-only" for="exampleInputEmail3">Email address</label> 
+          <input type="text" class="form-control" id="exampleInputEmail3" name="username" placeholder="Username" value="phil">
         </div>
        <!-- Sign In-password input -->
         <div class="form-group">
           <label class="sr-only" for="exampleInputPassword3">Password</label>
-          <input type="text" class="form-control" id="exampleInputPassword3" name="password" placeholder="Password">
+          <input type="text" class="form-control" id="exampleInputPassword3" name="password" placeholder="Password" value="hans">
         </div>
         
         <button type="submit" class="btn btn-default">login</button>
