--- a/views/planner/searchContents.html
+++ b/views/planner/searchContents.html
@@ -1,11 +1,11 @@
 <div class="container">
     <form >
-        <div>
-          <input type="text"  id="term" value="mexican" placeholder="Name of Place,Trails.....">
-          <input type="text"  id="location" value="San Jose" placeholder="Location">
-        </div>
-        <button type="button" id="currentLocation" class="btn btn-default">Submit</button>
-        <button type="button" id="testbutton" class="btn btn-default">Test</button>
+    <div id="search">
+        <input type="text" class="searchBox" id="term" value="mexican" placeholder="Name of Place,Trails.....">
+        <input type="text" class="searchBox" id="location" value="San Jose" placeholder="Location">
+    </div>      
+     <!--   <button type="button" id="currentLocation" class="btn btn-default">Submit</button> --->
+        <button type="button" id="testbutton" class="btn btn-default">Search</button>
       </form>
 
 <div id="searchPanel">
