--- a/views/planner/searchStyles.css
+++ b/views/planner/searchStyles.css
@@ -1,4 +1,5 @@
      html, body {
+        background-color:white;
         height: 100%;
         margin: 0;
         padding: 0;
@@ -6,6 +7,7 @@
       #map {
         width:45%;
         position:relative;
+        height:65%;
         float:right;
         top:50px;
       }
@@ -34,9 +36,59 @@
           margin-bottom:20px;
       }
       form{
-          width:30%;
-          margin: 0 auto;
+        max-width:700px;
+         width:75%;
+         margin: 0 auto;
       }
       .glyphicon-heart{
           color:red;
       }
+      #search{
+        float:left;
+      }
+      .searchBox{
+      margin-top: 5px;
+      padding-left:15px;  
+      border:none;
+      color:#f2f2f2;
+      background-color:#a6a6a6;
+      height:45px;
+      width:300px;
+      font-size:20px;
+      }
+      #testbutton{
+        background-color:#8FBC8F;
+        border-radius:0px;
+        width:90px;
+        height:45px;
+        font-size:20px;
+        font-weight:bold;
+        margin-top:5px;
+        color:#006600;
+      }
+      div{
+        font-family:Arial, Helvetica, sans-serif
+      }
+      #searchPanel{
+        height:200px;
+      }
+      .boxHighlight{
+        background-color:#e6e6e6;
+      }
+      .resultboxes{
+        height:98px;
+      }
+      .list-group-item{
+        border-color:transparent;
+      }
+      h5{
+        font-weight:bold;
+      }
+      .list-group-item-text{
+        font-size:12px;
+      }
+    #reviews{
+      color:gray;
+      font-size:10px;
+      font-style:italic;
+    }
