--- a/views/planner/planner.ejs
+++ b/views/planner/planner.ejs
@@ -13,30 +13,57 @@
 
 <script>
 
-        //Post data into node ----> see file app.js    
-        $.ajax({
+    //display all of the user's favorites items and retrieve yelpData of those items
+        //Post request to node  ----> app.js    
+       $.ajax({
             type: "POST",
             url: "/planner",
             data: "",
             dataType:"json",
-            success: function(matchFavorites){    //Return data obtained from node 
+            success: function(matchFavorites){    
             
-           for(var i = 0; i<matchFavorites.length;i++){
-              $("#searchResults").append(function(){
-            return "<div class= 'resultboxes'>"+
-                        "<span class='list-group-item'>"+
-                        "<h5 class='list-group-item-heading' id='heading'><span id='queryNumber'>"+'</span>.'+matchFavorites[i].name+"&nbsp&nbsp&nbsp<span>"+
-                        "</span></h4>"+
-                        "</di>"+
-                        "</span></div>";
-                   });
-           }
-            
-       $( ".resultboxes" ).draggable({
-          distance: 10
-        });
+            //display all favorite data in favorite panel
+                for(var i = 0; i<matchFavorites.length;i++){
+                      $("#searchResults").append(function(){
+                            return  "<div class= 'resultboxes' id='"+matchFavorites[i].id+"'>"+
+                                    "<span class='list-group-item'>"+
+                                    "<h5 class='list-group-item-heading' id='heading'><span id='queryNumber'>"+'</span>.'+matchFavorites[i].name+"&nbsp&nbsp&nbsp<span>"+
+                                    "</span></h4>"+
+                                    "</di>"+
+                                    "</span></div>";
+                           });
+                       }
+ 
+             //create slots for toDo panel
+                for(var x = 0; x<12; x++){ 
                     
-        console.log(matchFavorites)
+                        $(".sortPanel").append(function(){
+                          return "<div class ='ToDo'></div>";   
+                        });
+                    };
+                    
+                    
+            //features for dragging components
+               $( ".resultboxes" ).draggable({
+                  distance: 10
+                });
+            
+            
+            //features for dropping components    
+                $(".ToDo").droppable({
+                    accept:".resultboxes",
+                    activeClass:"dropBox",
+                    drop: function(event,ui){
+                        var droppedId = ui.draggable.attr("id");
+                        $(this).append("<div class='ToDoItems'>"+droppedId+"</div>");
+                    };
+                });    
+         
+      
+        //function for removing Todo
+        //function for moving Todo
+        //function for editing Todo
+        
         //set center of map to search locations
 
         //Render first 10 results from yelp search and plot on map
@@ -44,7 +71,7 @@
         //add number to queries and markers on maps
 
                 } 
-            });
+    });
 
 
 </script>
