--- a/views/planner/plannerContent.html
+++ b/views/planner/plannerContent.html
@@ -1,14 +1,10 @@
 <div class="container">
 
 
-<div id="searchPanel">
-      <br></br>
-    <div id="searchResults"></div>
+<div class="sortPanel">
 </div>
 
 <div class ="container" id="map"></div>
-</div>
-<div>
+<div id="searchResults"></div>
 
-</div>
 
