--- a/views/search/search.ejs
+++ b/views/search/search.ejs
@@ -14,6 +14,7 @@
 function initMap() {
     //google maps settings
     var markers=[] ; // array for storing all of the markers  
+   
     var map = new google.maps.Map(document.getElementById('map'), {
       center: {lat: -34.397, lng: 150.644},
       zoom: 10
@@ -21,25 +22,21 @@ function initMap() {
                     
     // obtain geolocatin of current position
     if (navigator.geolocation) {
-      navigator.geolocation.getCurrentPosition(function(position) {
-        
-    //set map center to current geolocation
-          $("#currentLocation").click(function() { 
-            map.setCenter( {lat: position.coords.latitude, lng: position.coords.longitude});
+          navigator.geolocation.getCurrentPosition(function(position) {
+        //set map center to current geolocation
+              $("#currentLocation").click(function() { 
+                map.setCenter( {lat: position.coords.latitude, lng: position.coords.longitude});
+              });
           });
-      });
-    }else{
-        console.log("failed")
-      };
+        }else{
+            console.log("failed")
+          };
 
       
     //Create search and render results using AJAX.
         //AJAX post request  to node and expect to recieve yelp data in JSON.
     
     $("#testbutton").click(function(){
-       
-       
-               
         //function for setting markers on map
         function markMap(map){
                 for ( var i = 0; i < markers.length; i++ ){
@@ -48,89 +45,89 @@ function initMap() {
         }
        //remove markers on map
         markMap(null);
+        
         markers=[];
         
         //empty list to refresh
         $("#searchResults").empty();
         
         var term = $("#term").val();         //obtain value from input form
+        
         var location = $("#location").val(); //obtain value from input form
          
         var favoritesData;
          
 
-        //Post data into node ----> see file app.js    
+        //Post request to node ---->  app.js    
         $.ajax({
             type: "POST",
             url: "/favorites",
             data: {term:term, location:location},
             dataType:"json",
             success: function(yelpData){    //Return data obtained from node 
-            
-            var spot = yelpData.businesses; //variable fo business array
-            console.log(spot);
+                
+                var spot = yelpData.businesses; //variable fo business array
             
             //set center of map to search locations
-            
                 map.setCenter({lat: yelpData.region.center.latitude , lng: yelpData.region.center.longitude}); 
-               
-        //Render first 10 results from yelp search and plot on map
-        
-        for( var i = 0 ; i<10 ; i++ ){
+       
+            //Render first 10 results from yelp search and plot on map
+                for( var i = 0 ; i<10 ; i++ ){
 
-                var queryNumber = String(i + 1);//number for listing out search results
-                  
+                var queryNumber = String(i + 1);  //number for listing out search results
+           
+            //print out serach results on panel
                 $("#searchResults").append(function(){
-                return "<div class= 'resultboxes'>"+
-                        "<span class='list-group-item'>"+
-                        "<h5 class='list-group-item-heading' id='heading'><span id='queryNumber'>"+queryNumber+'</span>.'+spot[i].name+"&nbsp&nbsp&nbsp<span>"+
-                        "<img src='"+spot[i].rating_img_url+"'></img></span><span id='reviews' >&nbsp"+spot[i].review_count+" reviews</span></h4>"     +
-                        "<p class='list-group-item-text'>"+spot[i].snippet_text+"</p></di><div id='heartIcon"+[i]+"' class='glyphicon glyphicon-heart-empty'></div>"+
-                        "</span><img class='locationImage'src='"+spot[i].image_url+"'></img></div>"
-                        
-                   });
+                    return "<div class= 'resultboxes'>"+
+                            "<span class='list-group-item'>"+
+                            "<h5 class='list-group-item-heading' id='heading'><span id='queryNumber'>"+queryNumber+'</span>.'+spot[i].name+"&nbsp&nbsp&nbsp<span>"+
+                            "<img src='"+spot[i].rating_img_url+"'></img></span><span id='reviews' >&nbsp"+spot[i].review_count+" reviews</span></h4>"     +
+                            "<p class='list-group-item-text'>"+spot[i].snippet_text+"</p></di><div id='heartIcon"+[i]+"' class='glyphicon glyphicon-heart-empty'></div>"+
+                            "</span><img class='locationImage'src='"+spot[i].image_url+"'></img></div>"
+                       });
+             
              //show heart as red if User have already added it to favorite. else, shows empty heart      
                 if(spot[i].heartOn=="true"){
                    $("#heartIcon"+[i]).addClass('glyphicon-heart').removeClass('glyphicon-heart-empty');
                     }else{
                     }
             
-               //add number to queries and markers on maps
-             marker = new google.maps.Marker({
-                            position: {lat:spot[i].location.coordinate.latitude, lng:spot[i].location.coordinate.longitude},
-                            title: spot[i].name,
-                            label: queryNumber,
-                            });    
-                       
-             markers.push(marker);
-             
-             markMap(map);
-           
+              //add number to queries and markers on maps
+                 marker = new google.maps.Marker({
+                                position: {lat:spot[i].location.coordinate.latitude, lng:spot[i].location.coordinate.longitude},
+                                title: spot[i].name,
+                                label: queryNumber,
+                                });    
+                               
+                 markers.push(marker);
+                 
+                 markMap(map);
+               
             };
 
-     //toggle heart button, add activities to node database and remove 
-          
+     //toggle heart button, add activities to node database 
                   $('.glyphicon').click(function(){
                       
-                      //Post id to node--->save queries id to currentUser
+                    
                       var selectedData = $(this).siblings('#heading').children('#queryNumber').html() - 1 ;
                       
                       var favoriteSpots =  spot[selectedData].id;
                       
                       
                       if($(this).attr("class") == 'glyphicon glyphicon-heart-empty' ){
+                         
                          //Change from hollow heart to red-filled heart
                           $(this).switchClass('glyphicon-heart-empty','glyphicon-heart',0);
                            
-                           //Post id to node--->save queries id to currentUser
-                             $.ajax({
-                                 type: "POST",
-                                 url: "/favorites/save",
-                                 data: {'id': favoriteSpots},
-                                 dataType:"json",
-                                 success: function(dataReturn){
-                                     console.log(dataReturn);
-                                 }
+                       //Post id to node--->save queries id to currentUser
+                          $.ajax({
+                             type: "POST",
+                             url: "/favorites/save",
+                             data: {'id': favoriteSpots},
+                             dataType:"json",
+                             success: function(dataReturn){
+                                 console.log(dataReturn);
+                             }
                              });    
                       
                           
