--- a/views/planner/plannerStyle.css
+++ b/views/planner/plannerStyle.css
@@ -40,9 +40,6 @@
          width:75%;
          margin: 0 auto;
       }
-      .glyphicon-heart{
-          color:red;
-      }
       #search{
         float:left;
       }
@@ -112,10 +109,27 @@
       .ToDo{
         border-color:gray;
         border-style:solid;
-        background-color:red;
-        height:50px;
-        
-        
+        background-color:#D3D3D3;
+        height:150px;
+        padding-top:15px;
       }
-      
-      
+      .ToDoItems{
+        border-color:white;
+        border-style:solid;
+        background-color: white;
+        width:400px;
+        height:110px;
+        margin: 0 auto;
+      }
+     .list-group-item{
+       
+         width:290px;
+         height:80px;
+          
+     }
+     .snippet_text{
+       display:block;
+       font-size:10px;
+       font-family: Arial, Helvetica, sans-serif;
+     }
+     
